[package]
name = "libjetstream"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
jetstream = { path = "../jetstream" }
uuid = { version = "1.2.1", features = ["v4"] }
lazy_static = "1.4.0"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "cjetstream"
crate-type = ["cdylib", "staticlib"]
